# nlt-otoi

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI_TOPOGRAPHY.py  LICENSE  NLT-DEV-OTOI.md  README.md  SECURITY.md  agent-solidarity-kit.json  file-structure.md  index.html  links.md  mcp-config.yaml  nltotoi.json  pyproject.toml  wrangler.jsonc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: accessibility-check.yml  create-branch-cleanup-issues.yml  schema-validation.yml  security-scan.yml  validate-governance.yml
.nltotoi/: README.md
.nltotoi/contracts/: README.md
.nltotoi/index/: governance-files.md
.nltotoi/proposals/: validation-roadmap.md
.nltotoi/scripts/: validate-governance.sh
ISSUE_TEMPLATE/: agent-escalation.md  governance-proposal.md
PULL_REQUEST_TEMPLATE/: agent-contribution.md
SOPs/: incident-response.md  new-agent-onboarding.md  repo-governance-setup.md
agents/: nlt-governance-steward.md
docs/: active-threads.md  best-practices.md  canonical-toi-migration.md  development-process.md  framework-overview.md  implementation-guide.md  neurolift-integration.md
docs/agent-log/: 2026-05-21-codex-repo-specific-governance.md  README.md
docs/agent-log/handoffs/: 2026-04-25-codex-governance-core-sync-handoff.json  2026-05-31-cursor-docs-automation-pr19-followup-handoff.json  2026-05-31-cursor-docs-governance-ci-runbook-handoff.json  (+11 more)
docs/escalations/: README.md
examples/: README.md
examples/neuroLift/: README.md  __init__.py  context_capsule.py  intent_ledger.py  orchestrator_patterns.py  playbook_engine.py
nlt-otoi/: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_OVERVIEW.md  README.md  requirements.txt
nlt-otoi/.github/: PULL_REQUEST_TEMPLATE.md
schemas/: collaborative-charter.schema.json  personal-toi.schema.json
src/nlt_otoi/: __init__.py  compat.py  constants.py  errors.py  honor.py  schema.py  types.py
templates/: agent-registration.json  collaborative-charter-template.md  commit-message.md  escalation.md  handoff-record.json  intent-log.md  personal-toi-template.md
templates/templates/: agent-registration.json  escalation.md  handoff-record.json
tests/: conftest.py  test_compat.py  test_conformance.py  test_honor.py
(+33 files in other folders)
